--- a/package.json
+++ b/package.json
@@ -1,1 +1,12 @@
-npm init -y
+{
+  "name": "render-node-app",
+  "version": "1.0.0",
+  "description": "Simple Node.js app for Render deployment",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
